chore: add dependencies to pom.xml